--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "next": "15.1.0",
+    "qs": "^6.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/qs": "^6.9.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
